apps/manifests/gitlab/gitlab-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
