apps/manifests/gitlab/gitlab-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: gitlab
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: http
  selector:
    app: gitlab
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-ssh
  namespace: gitlab
spec:
  type: LoadBalancer
  ports:
  - port: 2222
    targetPort: 22
    protocol: TCP
    name: ssh
  selector:
    app: gitlab
