apps/manifests/gitlab/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-postgresql
  namespace: gitlab
spec:
  type: ClusterIP
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgres
  selector:
    app: gitlab-postgresql
