apps/manifests/gitlab/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-redis
  namespace: gitlab
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
    name: redis
  selector:
    app: gitlab-redis
